Replaced my email address with generic email

--- a/sandbox_milter.cfg
+++ b/sandbox_milter.cfg
@@ -9,5 +9,5 @@ name: sandbox_nonsmtpd_milter
 [sandbox]
 valid_senders: /etc/sandbox_milter/senders
 allowed_recipients: /etc/sandbox_milter/allowed_recipients
-redirect_address: alex@innovacomputing.com
+redirect_address: root@localhost
 log_debug: 0
